@@ -3,6 +3,7 @@ This file documents the revision history for mod_gearman.
 0.5    ...
           - added worker thresholds to check_gearman
           - changed performance data for check_gearman
+          - initscript no uses su -s instead of su
 
 0.4    Sat Sep 25 23:15:26 CEST 2010
           - added gearman_top
